JIRA: EDGOAIPMH-7 - Define schemas (if applicable) NEWS.md updated Viachaslau Khandramai <Viachaslau_Khandramai@epam.com>

--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,7 @@
         </executions>
         <configuration>
           <sources>
-            <source>ramls/OAI-PMH.xsd</source>
+            <source>ramls/schemas/OAI-PMH.xsd</source>
           </sources>
           <packageName>org.openarchives.oai</packageName>
         </configuration>
