JIRA: EDGOAIPMH-7 - Define schemas (if applicable) Switching MOJO JAXB plugin to JVNET JAXB. Viachaslau Khandramai <Viachaslau_Khandramai@epam.com>

--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,9 @@
   <properties>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
-    <jaxb2.maven.plugin.ver>2.4</jaxb2.maven.plugin.ver>
+    <maven.jaxb2.plugin.ver>0.14.0</maven.jaxb2.plugin.ver>
+    <jaxb2.fluent.api.plugin.ver>3.0</jaxb2.fluent.api.plugin.ver>
+    <jaxb2.basics.annotate.plugin.ver>1.1.0</jaxb2.basics.annotate.plugin.ver>
 
     <!-- the main class -->
     <exec.mainClass>org.folio.edge.oaipmh.MainVerticle</exec.mainClass>
@@ -59,24 +61,46 @@
     <plugins>
       <!-- JAXB Maven Plugin-->
       <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>jaxb2-maven-plugin</artifactId>
-        <version>${jaxb2.maven.plugin.ver}</version>
+        <groupId>org.jvnet.jaxb2.maven2</groupId>
+        <artifactId>maven-jaxb2-plugin</artifactId>
+        <version>${maven.jaxb2.plugin.ver}</version>
         <executions>
           <execution>
-            <id>xjc</id>
             <goals>
-              <goal>xjc</goal>
+              <goal>generate</goal>
             </goals>
           </execution>
         </executions>
         <configuration>
-          <sources>
-            <source>ramls/schemas/OAI-PMH.xsd</source>
-          </sources>
-          <packageName>org.openarchives.oai</packageName>
+          <extension>true</extension>
+          <schemaDirectory>ramls/schemas</schemaDirectory>
+          <schemaIncludes>
+            <include>OAI-PMH.xsd</include>
+          </schemaIncludes>
+          <bindingDirectory>ramls/schemas</bindingDirectory>
+          <bindingIncludes>
+            <include>bindings.xjb</include>
+          </bindingIncludes>
+          <generateDirectory>target/generated-sources/jaxb</generateDirectory>
+          <args>
+            <arg>-Xfluent-api</arg>
+            <arg>-Xannotate</arg>
+          </args>
+          <plugins>
+            <plugin>
+              <groupId>org.jvnet.jaxb2_commons</groupId>
+              <artifactId>jaxb2-fluent-api</artifactId>
+              <version>${jaxb2.fluent.api.plugin.ver}</version>
+            </plugin>
+            <plugin>
+              <groupId>org.jvnet.jaxb2_commons</groupId>
+              <artifactId>jaxb2-basics-annotate</artifactId>
+              <version>${jaxb2.basics.annotate.plugin.ver}</version>
+            </plugin>
+          </plugins>
         </configuration>
       </plugin>
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-shade-plugin</artifactId>
