--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
     <maven.jaxb2.plugin.ver>0.14.0</maven.jaxb2.plugin.ver>
     <jaxb2.fluent.api.plugin.ver>3.0</jaxb2.fluent.api.plugin.ver>
     <jaxb2.basics.annotate.plugin.ver>1.1.0</jaxb2.basics.annotate.plugin.ver>
+    <jaxb2-basics.ver>0.12.0</jaxb2-basics.ver>
 
     <!-- the main class -->
     <exec.mainClass>org.folio.edge.oaipmh.MainVerticle</exec.mainClass>
@@ -49,6 +50,22 @@
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
       <version>19.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.5</version>
+    </dependency>
+    <!-- Jaxb dependencies -->
+    <dependency>
+      <groupId>com.migesok</groupId>
+      <artifactId>jaxb-java-time-adapters</artifactId>
+      <version>1.1.3</version>
+    </dependency>
+    <dependency>
+      <groupId>org.jvnet.jaxb2_commons</groupId>
+      <artifactId>jaxb2-basics-runtime</artifactId>
+      <version>${jaxb2-basics.ver}</version>
     </dependency>
     <!-- Test dependencies -->
     <dependency>
@@ -117,6 +134,8 @@
           <args>
             <arg>-Xfluent-api</arg>
             <arg>-Xannotate</arg>
+            <arg>-Xequals</arg>
+            <arg>-XhashCode</arg>
           </args>
           <plugins>
             <plugin>
@@ -128,6 +147,11 @@
               <groupId>org.jvnet.jaxb2_commons</groupId>
               <artifactId>jaxb2-basics-annotate</artifactId>
               <version>${jaxb2.basics.annotate.plugin.ver}</version>
+            </plugin>
+            <plugin>
+              <groupId>org.jvnet.jaxb2_commons</groupId>
+              <artifactId>jaxb2-basics</artifactId>
+              <version>${jaxb2-basics.ver}</version>
             </plugin>
           </plugins>
         </configuration>
