--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,13 @@
     <jaxb2.basics.annotate.plugin.ver>1.1.0</jaxb2.basics.annotate.plugin.ver>
     <jaxb2-basics.ver>0.12.0</jaxb2-basics.ver>
     <vertx.ver>3.5.4</vertx.ver>
+    <apache.common.lang.ver>3.5</apache.common.lang.ver>
+    <guava.ver>19.0</guava.ver>
+    <jaxb.time.adaptor.ver>1.1.3</jaxb.time.adaptor.ver>
+    <junit.ver>4.12</junit.ver>
+    <mockito.ver>1.9.5</mockito.ver>
+    <rest.assured.ver>2.9.0</rest.assured.ver>
+    <edge.common.ver>0.3.4-SNAPSHOT</edge.common.ver>
 
     <!-- the main class -->
     <exec.mainClass>org.folio.edge.oaipmh.MainVerticle</exec.mainClass>
@@ -60,23 +67,23 @@
     <dependency>
       <groupId>org.folio</groupId>
       <artifactId>edge-common</artifactId>
-      <version>0.3.4-SNAPSHOT</version>
+      <version>${edge.common.ver}</version>
     </dependency>
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
-      <version>19.0</version>
+      <version>${guava.ver}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-lang3</artifactId>
-      <version>3.5</version>
+      <version>${apache.common.lang.ver}</version>
     </dependency>
     <!-- Jaxb dependencies -->
     <dependency>
       <groupId>com.migesok</groupId>
       <artifactId>jaxb-java-time-adapters</artifactId>
-      <version>1.1.3</version>
+      <version>${jaxb.time.adaptor.ver}</version>
     </dependency>
     <dependency>
       <groupId>org.jvnet.jaxb2_commons</groupId>
@@ -87,37 +94,19 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.12</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.awaitility</groupId>
-      <artifactId>awaitility</artifactId>
-      <version>3.0.0</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>nl.jqno.equalsverifier</groupId>
-      <artifactId>equalsverifier</artifactId>
-      <version>2.4.6</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>io.vertx</groupId>
-      <artifactId>vertx-unit</artifactId>
-      <version>3.2.1</version>
+      <version>${junit.ver}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-all</artifactId>
-      <version>1.9.5</version>
+      <version>${mockito.ver}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>com.jayway.restassured</groupId>
       <artifactId>rest-assured</artifactId>
-      <version>2.9.0</version>
+      <version>${rest.assured.ver}</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
