MODOAIPMH-53 OAI-PMH: Response Compression (backend module)
- enable support of already compressed response body returned by repository business logic
- updating validation logic to return request parameters in OAI-PMH response
- overriding accessDenied and requestTimeout error messages
- enabling debug for unit tests

--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,8 @@
   <properties>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
     <maven.jaxb2.plugin.ver>0.14.0</maven.jaxb2.plugin.ver>
     <jaxb2.fluent.api.plugin.ver>3.0</jaxb2.fluent.api.plugin.ver>
     <jaxb2.basics.annotate.plugin.ver>1.1.0</jaxb2.basics.annotate.plugin.ver>
