EDGOAIPMH-8 - "OAI-PMH: Response compression" (ephemeral.properties)

--- a/src/main/resources/ephemeral.properties
+++ b/src/main/resources/ephemeral.properties
@@ -1,9 +1,9 @@
 secureStore.type=Ephemeral
 # a comma separated list of tenants
-tenants=diku
+tenants=tenant
 #######################################################
 # For each tenant, the institutional user password...
 #
 # Note: this is intended for development purposes only
 #######################################################
-diku={DIKU_IU_PASSWORD}
+tenant=user,password
