Add ability to specify API Key as part of the path
- Updating raml file with new endpoint
- Updating `OaiPmhOkapiClient` so it uses excludedParams defined in `Verb`
- Updating debug logging so response headers are being logged as well
- Removing `%X{reqId}` from log4j layout pattern as this is okapi specific

--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -3,6 +3,6 @@ log4j.rootLogger=DEBUG, CONSOLE
 # CONSOLE is set to be a ConsoleAppender using a PatternLayout.
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
 log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
-log4j.appender.CONSOLE.layout.ConversionPattern=%d{HH:mm:ss} %-5p [%-25t]: %-20.25C{1} %X{reqId} %m%n
+log4j.appender.CONSOLE.layout.ConversionPattern=%d{HH:mm:ss} %-5p [%-25t]: %C{1} %m%n
 
 log4j.logger.io.netty=INFO
