--- a/src/main/resources/ephemeral.properties
+++ b/src/main/resources/ephemeral.properties
@@ -1,9 +1,9 @@
 secureStore.type=Ephemeral
 # a comma separated list of tenants
-tenants=tenant
+tenants=diku
 #######################################################
 # For each tenant, the institutional user password...
 #
 # Note: this is intended for development purposes only
 #######################################################
-tenant=user,password
+diku=user,password
