--- a/src/main/resources/ephemeral.properties
+++ b/src/main/resources/ephemeral.properties
@@ -6,4 +6,4 @@ tenants=diku
 #
 # Note: this is intended for development purposes only
 #######################################################
-diku=user,password
+diku=diku_admin,password
