EDGOAIPMH-28 # changing ephemeral.properties (login: user, password: password) to be consistent with api-tests changes

--- a/src/main/resources/ephemeral.properties
+++ b/src/main/resources/ephemeral.properties
@@ -6,4 +6,4 @@ tenants=diku
 #
 # Note: this is intended for development purposes only
 #######################################################
-diku=diku_admin,password
+diku=user,password
