--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,7 @@
     <mockito.ver>1.9.5</mockito.ver>
     <rest.assured.ver>2.9.0</rest.assured.ver>
     <edge.common.ver>0.3.8-SNAPSHOT</edge.common.ver>
+    <mod-configuration-client.version>5.1.0</mod-configuration-client.version>
 
     <!-- the main class -->
     <exec.mainClass>org.folio.edge.oaipmh.MainVerticle</exec.mainClass>
@@ -70,6 +71,11 @@
       <groupId>org.folio</groupId>
       <artifactId>edge-common</artifactId>
       <version>2.0.3</version>
+    </dependency>
+    <dependency>
+      <groupId>org.folio</groupId>
+      <artifactId>mod-configuration-client</artifactId>
+      <version>${mod-configuration-client.version}</version>
     </dependency>
     <dependency>
       <groupId>com.google.guava</groupId>
