--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,12 @@
       <version>${rest.assured.ver}</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.12</version>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
 
   <build>
