--- a/src/main/resources/ephemeral.properties
+++ b/src/main/resources/ephemeral.properties
@@ -7,3 +7,4 @@ tenants=diku
 # Note: this is intended for development purposes only
 #######################################################
 diku=user,password
+test_oaipmh=test-user, test
