Add test tenant

--- a/src/main/resources/ephemeral.properties
+++ b/src/main/resources/ephemeral.properties
@@ -1,6 +1,6 @@
 secureStore.type=Ephemeral
 # a comma separated list of tenants
-tenants=diku
+tenants=diku,test_oaipmh
 #######################################################
 # For each tenant, the institutional user password...
 #
