--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,6 @@
     <jaxb2.fluent.api.plugin.ver>3.0</jaxb2.fluent.api.plugin.ver>
     <jaxb2.basics.annotate.plugin.ver>1.1.0</jaxb2.basics.annotate.plugin.ver>
     <jaxb2-basics.ver>0.12.0</jaxb2-basics.ver>
-    <vertx.ver>3.5.4</vertx.ver>
     <apache.common.lang.ver>3.5</apache.common.lang.ver>
     <guava.ver>19.0</guava.ver>
     <jaxb.time.adaptor.ver>1.1.3</jaxb.time.adaptor.ver>
@@ -45,31 +44,16 @@
     <mockito.ver>1.9.5</mockito.ver>
     <rest.assured.ver>4.3.0</rest.assured.ver>
     <mod-configuration-client.version>5.1.0</mod-configuration-client.version>
-
+    <edge.common.version>4.2.0</edge.common.version>
     <!-- the main class -->
     <exec.mainClass>org.folio.edge.oaipmh.MainVerticle</exec.mainClass>
   </properties>
 
   <dependencies>
     <dependency>
-      <groupId>io.vertx</groupId>
-      <artifactId>vertx-core</artifactId>
-      <version>${vertx.ver}</version>
-    </dependency>
-    <dependency>
-      <groupId>io.vertx</groupId>
-      <artifactId>vertx-web</artifactId>
-      <version>${vertx.ver}</version>
-    </dependency>
-    <dependency>
-      <groupId>io.vertx</groupId>
-      <artifactId>vertx-auth-oauth2</artifactId>
-      <version>${vertx.ver}</version>
-    </dependency>
-    <dependency>
       <groupId>org.folio</groupId>
       <artifactId>edge-common</artifactId>
-      <version>2.0.3</version>
+      <version>${edge.common.version}</version>
     </dependency>
     <dependency>
       <groupId>org.folio</groupId>
