--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,7 @@
     <guava.ver>19.0</guava.ver>
     <jaxb.time.adaptor.ver>1.1.3</jaxb.time.adaptor.ver>
     <junit.ver>4.13.1</junit.ver>
+    <org.junit.jupiter.ver>5.8.1</org.junit.jupiter.ver>
     <mockito.ver>1.9.5</mockito.ver>
     <rest.assured.ver>4.3.0</rest.assured.ver>
     <mod-configuration-client.version>5.1.0</mod-configuration-client.version>
@@ -98,6 +99,18 @@
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>${junit.ver}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-params</artifactId>
+      <version>${org.junit.jupiter.ver}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>io.vertx</groupId>
+      <artifactId>vertx-junit5</artifactId>
+      <version>4.2.6</version>
       <scope>test</scope>
     </dependency>
     <dependency>
