--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,8 @@
     <apache.common.lang.ver>3.5</apache.common.lang.ver>
     <guava.ver>19.0</guava.ver>
     <jaxb.time.adaptor.ver>1.1.3</jaxb.time.adaptor.ver>
-    <junit.ver>4.13.1</junit.ver>
+    <vertx-junit5.ver>4.2.6</vertx-junit5.ver>
+    <org.junit.jupiter.ver>5.8.1</org.junit.jupiter.ver>
     <mockito.ver>1.9.5</mockito.ver>
     <rest.assured.ver>4.3.0</rest.assured.ver>
     <mod-configuration-client.version>5.1.0</mod-configuration-client.version>
@@ -93,11 +94,16 @@
       <artifactId>jaxb2-basics-runtime</artifactId>
       <version>${jaxb2-basics.ver}</version>
     </dependency>
-    <!-- Test dependencies -->
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>${junit.ver}</version>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-engine</artifactId>
+      <version>${org.junit.jupiter.ver}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>io.vertx</groupId>
+      <artifactId>vertx-junit5</artifactId>
+      <version>${vertx-junit5.ver}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
