--- a/pom.xml
+++ b/pom.xml
@@ -40,12 +40,16 @@
     <apache.common.lang.ver>3.5</apache.common.lang.ver>
     <guava.ver>19.0</guava.ver>
     <jaxb.time.adaptor.ver>1.1.3</jaxb.time.adaptor.ver>
-    <vertx-junit5.ver>4.2.6</vertx-junit5.ver>
-    <org.junit.jupiter.ver>5.8.1</org.junit.jupiter.ver>
-    <mockito.ver>1.9.5</mockito.ver>
-    <rest.assured.ver>4.3.0</rest.assured.ver>
-    <mod-configuration-client.version>5.1.0</mod-configuration-client.version>
-    <edge.common.version>4.2.0</edge.common.version>
+    <jaxb-impl.version>2.3.6</jaxb-impl.version>
+    <jaxb-core.version>2.3.0.1</jaxb-core.version>
+    <mod-configuration-client.version>5.7.7</mod-configuration-client.version>
+    <edge.common.version>4.3.0</edge.common.version>
+    <vertx-stack-depchain.version>4.3.1</vertx-stack-depchain.version>
+    <log4j-bom.version>2.17.2</log4j-bom.version>
+    <junit.version>4.13.2</junit.version>
+    <mockito-core.version>4.6.1</mockito-core.version>
+    <rest-assured.version>5.1.0</rest-assured.version>
+    <lombok.version>1.18.12</lombok.version>
     <!-- the main class -->
     <exec.mainClass>org.folio.edge.oaipmh.MainVerticle</exec.mainClass>
   </properties>
@@ -53,9 +57,16 @@
   <dependencyManagement>
     <dependencies>
       <dependency>
+        <groupId>io.vertx</groupId>
+        <artifactId>vertx-stack-depchain</artifactId>
+        <version>${vertx-stack-depchain.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <dependency>
         <groupId>org.apache.logging.log4j</groupId>
         <artifactId>log4j-bom</artifactId>
-        <version>2.17.0</version>
+        <version>${log4j-bom.version}</version>
         <scope>import</scope>
         <type>pom</type>
       </dependency>
@@ -83,7 +94,18 @@
       <artifactId>commons-lang3</artifactId>
       <version>${apache.common.lang.ver}</version>
     </dependency>
+
     <!-- Jaxb dependencies -->
+    <dependency>
+      <groupId>com.sun.xml.bind</groupId>
+      <artifactId>jaxb-impl</artifactId>
+      <version>${jaxb-impl.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.sun.xml.bind</groupId>
+      <artifactId>jaxb-core</artifactId>
+      <version>${jaxb-core.version}</version>
+    </dependency>
     <dependency>
       <groupId>com.migesok</groupId>
       <artifactId>jaxb-java-time-adapters</artifactId>
@@ -94,34 +116,40 @@
       <artifactId>jaxb2-basics-runtime</artifactId>
       <version>${jaxb2-basics.ver}</version>
     </dependency>
+    <!-- Test dependencies -->
     <dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter-engine</artifactId>
-      <version>${org.junit.jupiter.ver}</version>
+      <groupId>io.vertx</groupId>
+      <artifactId>vertx-junit5</artifactId>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>io.vertx</groupId>
-      <artifactId>vertx-junit5</artifactId>
-      <version>${vertx-junit5.ver}</version>
+      <artifactId>vertx-unit</artifactId>
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>${junit.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
       <groupId>org.mockito</groupId>
-      <artifactId>mockito-all</artifactId>
-      <version>${mockito.ver}</version>
+      <artifactId>mockito-core</artifactId>
+      <version>${mockito-core.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>io.rest-assured</groupId>
       <artifactId>rest-assured</artifactId>
-      <version>${rest.assured.ver}</version>
+      <version>${rest-assured.version}</version>
       <scope>test</scope>
     </dependency>
+
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
-      <version>1.18.12</version>
+      <version>${lombok.version}</version>
       <scope>provided</scope>
     </dependency>
   </dependencies>
