EDGOAIPMH-99 - Harvesting Across Tenants Orchestrator

--- a/src/main/resources/ephemeral.properties
+++ b/src/main/resources/ephemeral.properties
@@ -1,6 +1,6 @@
 secureStore.type=Ephemeral
 # a comma separated list of tenants
-tenants=diku,test_oaipmh
+tenants=diku,test_oaipmh,central,tenant1,tenant2,tenant3,tenant4
 #######################################################
 # For each tenant, the institutional user password...
 #
@@ -8,3 +8,8 @@ tenants=diku,test_oaipmh
 #######################################################
 diku=user,password
 test_oaipmh=test-user,test
+central=user,password
+tenant1=user,password
+tenant2=user,password
+tenant3=user,password
+tenant4=user,password
