--- a/pom.xml
+++ b/pom.xml
@@ -165,8 +165,7 @@
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.8.1</version>
           <configuration>
-            <source>${maven.compiler.source}</source>
-            <target>${maven.compiler.target}</target>
+            <release>17</release>
             <encoding>UTF-8</encoding>
           </configuration>
         </plugin>
