EDGOAIPMH-104 - Issues related to Cross tenant incremental harvest

--- a/src/main/resources/ephemeral.properties
+++ b/src/main/resources/ephemeral.properties
@@ -1,6 +1,6 @@
 secureStore.type=Ephemeral
 # a comma separated list of tenants
-tenants=diku,test_oaipmh,central,central2,tenant1,tenant2,tenant3,tenant4,tenant5
+tenants=diku,test_oaipmh,central,central2,tenant1,tenant2,tenant3,tenant4,tenant5,tenant6
 #######################################################
 # For each tenant, the institutional user password...
 #
@@ -15,3 +15,4 @@ tenant2=user,password
 tenant3=user,password
 tenant4=user,password
 tenant5=user,password
+tenant6=user,password
