--- a/pom.xml
+++ b/pom.xml
@@ -50,8 +50,12 @@
     <rest-assured.version>5.1.0</rest-assured.version>
     <lombok.version>1.18.24</lombok.version>
     <bc-fips.version>1.0.2.5</bc-fips.version>
+    <bcpkix-fips.version>1.0.7</bcpkix-fips.version>
+    <bctls-fips.version>1.0.19</bctls-fips.version>
     <!-- the main class -->
     <exec.mainClass>org.folio.edge.oaipmh.MainVerticle</exec.mainClass>
+    <sonar.exclusions>src/main/java/org/folio/edge/oaipmh/OaiPmhLauncher.java</sonar.exclusions>
+
   </properties>
 
   <dependencyManagement>
@@ -150,11 +154,21 @@
       <version>${lombok.version}</version>
       <scope>provided</scope>
     </dependency>
-    <!-- Library provides the basic cryptographic functionality complying with FIPS -->
+    <!-- Libraries provide the basic cryptographic functionality complying with FIPS -->
     <dependency>
       <groupId>org.bouncycastle</groupId>
       <artifactId>bc-fips</artifactId>
       <version>${bc-fips.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.bouncycastle</groupId>
+      <artifactId>bcpkix-fips</artifactId>
+      <version>${bcpkix-fips.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.bouncycastle</groupId>
+      <artifactId>bctls-fips</artifactId>
+      <version>${bctls-fips.version}</version>
     </dependency>
   </dependencies>
 
