--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,9 @@
   </licenses>
 
   <properties>
-    <java.version>17</java.version>
+    <java.version>21</java.version>
+    <maven.compiler.source>21</maven.compiler.source>
+    <maven.compiler.target>21</maven.compiler.target>
     <raml-module-builder.version>35.3.0</raml-module-builder.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
@@ -159,9 +161,9 @@
           Java 1.8 -->
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.8.1</version>
+          <version>3.14.0</version>
           <configuration>
-            <release>17</release>
+            <release>21</release>
             <encoding>UTF-8</encoding>
           </configuration>
         </plugin>
