EDGOAIPMH-128 - Update to edge-oai-pmh Java 21

--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,7 @@
     <mockito-core.version>5.15.2</mockito-core.version>
     <rest-assured.version>5.5.1</rest-assured.version>
     <lombok.version>1.18.36</lombok.version>
+    <apache.httpclient.version>4.5.14</apache.httpclient.version>
     <!-- the main class -->
     <exec.mainClass>org.folio.edge.oaipmh.MainVerticle</exec.mainClass>
   </properties>
@@ -151,6 +152,12 @@
       <artifactId>lombok</artifactId>
       <version>${lombok.version}</version>
       <scope>provided</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpclient</artifactId>
+      <version>${apache.httpclient.version}</version>
     </dependency>
   </dependencies>
 
